# test-repo

./: .env  main.py  pyproject.toml
controllers/: product_controller.py
core/: config.py  security.py
db/: database.py
frontend/: add_product.css  add_product.html  dashboard.css  dashboard.html  home_page.css  home_page.html
models/: address.py  admin.py  buyer.py  category.py  inventory.py  product.py
repositories/: address_repo.py  admin_repo.py  buyer_repo.py
schemas/: address.py  admin.py  buyer.py  category.py  product.py
services/: admin_service.py  buyer_service.py
views/: admin_router.py  buyer_router.py  product_routers.py
